Fix attachment overlay list overflow
Hide per page select, because the select is not
able to do remote calls and it does not make any sense
to change amount of files, because the dialog has a fixed
height.

--- a/app/assets/stylesheets/alchemy/admin/archive.scss
+++ b/app/assets/stylesheets/alchemy/admin/archive.scss
@@ -306,6 +306,10 @@ div#filter_bar {
 }
 
 #overlay_file_list {
+  max-height: 100%;
+  overflow-y: auto;
+  padding-bottom: $pagination-height;
+
   .assign_file_file {
     display: block;
     margin-bottom: var(--spacing-1);
